syntax="proto3";

package model;
option go_package="model";

message helloReq{
    string firstname = 1;
    string lastname = 2;
}

message helloResp {
    string result = 1;
}

service HelloService {
    rpc SayHello (helloReq) returns (helloResp);
}